# book-club

BookClubProject/: CMakeLists.txt  main.cpp  resources.qrc
BookClubProject/Database/: DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseManager.cpp  DatabaseManager.h
BookClubProject/Mutual/: changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  editinfodialog.cpp  editinfodialog.h  editinfodialog.ui  infodialog.cpp  infodialog.h  infodialog.ui  notificationwidget.cpp  notificationwidget.h  notificationwidget.ui
BookClubProject/Network-Manger/: NetworkManager.cpp  NetworkManager.h
BookClubProject/Publishers/: PublisherInfoDialog.cpp  PublisherInfoDialog.h  PublisherInfoDialog.ui  addbookdialog.cpp  addbookdialog.h  addbookdialog.ui  addnewbookdialog.cpp  addnewbookdialog.h  addnewbookdialog.ui  applydiscountwindow.cpp  applydiscountwindow.h  applydiscountwindow.ui  bookstatics.cpp  bookstatics.h  bookstatics.ui  bookstaticswindow.cpp  bookstaticswindow.h  bookstaticswindow.ui  bookstatisticswindow.cpp  bookstatisticswindow.h  bookstatisticswindow.ui  deactivatebookwindow.cpp  deactivatebookwindow.h  deactivatebookwindow.ui  deleteBookWindow.cpp  deleteBookWindow.h  deleteBookWindow.ui  editbookswindow.cpp  editbookswindow.h  editbookswindow.ui  mybooks.cpp  mybooks.h  mybooks.ui  publisherprofilewindow.cpp  publisherprofilewindow.h  publisherprofilewindow.ui
BookClubProject/Repositories/: BookRepository.cpp  BookRepository.h  LibraryRepository.cpp  LibraryRepository.h  PurchaseRepository.cpp  PurchaseRepository.h  ReviewRepository.cpp  ReviewRepository.h  UserRepository.cpp  UserRepository.h
BookClubProject/Server/: ClientHandler.cpp  ClientHandler.h  CommandFactory.cpp  CommandFactory.h  Commands.cpp  Commands.h  Request.cpp  Request.h  RequestParser.cpp  RequestParser.h  Response.cpp  Response.h  Server.cpp  Server.h  server.cpp  server.h  serverdashboardwindow.cpp  serverdashboardwindow.h  serverdashboardwindow.ui
BookClubProject/Services/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h  BookService.cpp  BookService.h  CartService.cpp  CartService.h  LibraryService.cpp  LibraryService.h  NotificationService.cpp  NotificationService.h  PublisherService.cpp  PublisherService.h  PurchaseService.cpp  PurchaseService.h  ReviewService.cpp  ReviewService.h  UserService.cpp  UserService.h
BookClubProject/Shared/: AuthService.h  Book.cpp  Book.h  Cart.cpp  Cart.h  (+29 more)
(+79 files in other folders)
